cmake: remove clang

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ add_executable(${CMAKE_PROJECT_NAME}
     ${SOURCES}
 )
 
-set(CMAKE_C_COMPILER "clang")
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -std=gnu11")
 target_link_libraries(${CMAKE_PROJECT_NAME} keyutils scrypt)
+install(TARGETS ext4-crypt
+        DESTINATION bin)
