project: replaced libscrypt by libsodium
The scrypt parameters have been preserved to ensure retro-compatibility.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,6 @@ add_executable(${CMAKE_PROJECT_NAME}
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -std=gnu11")
 set(CMAKE_EXE_LINKER_FLAGS "-s")
 
-target_link_libraries(${CMAKE_PROJECT_NAME} keyutils scrypt)
+target_link_libraries(${CMAKE_PROJECT_NAME} keyutils sodium)
 install(TARGETS ext4-crypt
         DESTINATION bin)
